kube/bases/client/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    component: client
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    component: client
